--- a/w06/depth_estimation/03_model_midas.ipynb
+++ b/w06/depth_estimation/03_model_midas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "4d08fd7c-e1b6-4b6f-95fc-00ddf1ebbcab",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "1ceb47aa-31a9-47cc-aad5-4a686ac1a96e",
    "metadata": {},
    "outputs": [
@@ -23,8 +23,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using cache found in /home/ludwig/.cache/torch/hub/intel-isl_MiDaS_master\n",
-      "Using cache found in /home/ludwig/.cache/torch/hub/rwightman_gen-efficientnet-pytorch_master\n"
+      "Using cache found in C:\\Users\\ludwig/.cache\\torch\\hub\\intel-isl_MiDaS_master\n",
+      "e:\\repos\\rebelway-applied-ml\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "e:\\repos\\rebelway-applied-ml\\.venv\\Lib\\site-packages\\timm\\models\\layers\\__init__.py:49: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
+      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
      ]
     },
     {
@@ -32,6 +35,13 @@
      "output_type": "stream",
      "text": [
       "Loading weights:  None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in C:\\Users\\ludwig/.cache\\torch\\hub\\rwightman_gen-efficientnet-pytorch_master\n"
      ]
     }
    ],
@@ -44,7 +54,15 @@
    "execution_count": null,
    "id": "6374737d-1db9-46c5-b0de-2b4bb282e9b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error reading frame\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "device = \"cuda\"\n",
@@ -55,7 +73,7 @@
     "    transforms.Resize((384,384)),\n",
     "    transforms.Normalize(mean=[0.485,0.456,0.406], std=[.0229,0.224,0.225])\n",
     "])\n",
-    "source = \"person_face_640.mp4\"\n",
+    "source = \"./person_face_640.mp4\"\n",
     "cap = cv2.VideoCapture(source)\n",
     "\n",
     "if not cap.isOpened():\n",
@@ -78,6 +96,7 @@
     "    depth_map = cv2.normalize(depth_map, None, 0, 255, cv2.NORM_MINMAX, cv2.CV_8U)\n",
     "    depth_map = cv2.resize(depth_map, (frame_width, frame_height))\n",
     "\n",
+    "    print(\"Depth map shape:\", depth_map.shape)\n",
     "    cv2.imshow(\"Depth map\", depth_map)\n",
     "    cv2.imshow(\"Feed\", frame)\n",
     "\n",
@@ -100,9 +119,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Rebelway ML 3.12",
+   "display_name": "rebelway-applied-ml",
    "language": "python",
-   "name": "rebelway-ml-312"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
