--- a/w06/depth_estimation/03_model_midas.ipynb
+++ b/w06/depth_estimation/03_model_midas.ipynb
@@ -119,9 +119,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rebelway-applied-ml",
+   "display_name": "Rebelway ML 3.12",
    "language": "python",
-   "name": "python3"
+   "name": "rebelway-ml-312"
   },
   "language_info": {
    "codemirror_mode": {
